--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,3 @@
-file.reference.OdontoPlan-com.neuromedia.orthoplan.mobile=.
+file.reference.OdontoPlan-orthoplan=.
 files.encoding=UTF-8
-site.root.folder=${file.reference.OdontoPlan-com.neuromedia.orthoplan.mobile}
+site.root.folder=${file.reference.OdontoPlan-orthoplan}
